# e-learning-frontend

./: .env.example  .env.production  .gitignore  .replit  README.md  auth.py  backend-gitignore  backend-setup.md  clear-console.js  database.py  frontend-gitignore  frontend-package.json  frontend-setup.md  index.html  logger.py  main.py  models.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_data.py  tailwind.config.js  tsconfig.json  vite.config.js
attached_assets/: Pasted-Build-a-full-stack-AI-Tutoring-Platform-in-a-monorepo-setup-with-the-following-requirements-F-1748344256263.txt
services/: academic_service.py  communication_service.py  discussion_service.py  gemini_service.py  pdf_service.py  quiz_service.py  realtime_service.py  stripe_service.py  user_management_service.py  whisper_service.py
src/: App.tsx  index.css  main.tsx  types.ts
src/api/: client.ts
src/components/: Navbar.tsx  ProgressChart.tsx  QuizCard.tsx  VoiceRecorder.tsx
src/hooks/: useAuth.ts  useAuth.tsx
src/pages/: AdminDashboard.tsx  Ask.tsx  AssignmentManagement.tsx  CampusCoordination.tsx  ComingSoon.tsx  CourseAnalytics.tsx  CourseManagement.tsx  Courses.tsx  Dashboard.tsx  DepartmentManagement.tsx  DiscussionForums.tsx  Home.tsx  LecturerAssessments.tsx  LecturerCourseDetails.tsx  LecturerCourseManagement.tsx  LecturerCourses.tsx  LecturerDashboard.tsx  Login.tsx  MainDashboard.tsx  ProgramManagement.tsx  Quiz.tsx  Register.tsx  Settings.tsx  StudentAcademicRecords.tsx  StudentAssessments.tsx  StudentAssignments.tsx  StudentDashboard.tsx  (+8 more)
(+2 files in other folders)
